WordPress組み込み内容を反映

--- a/wordpress/.htaccess
+++ b/wordpress/.htaccess
@@ -1,3 +1,9 @@
+AuthUserFile /home/users/1/cocotte.jp-yyk178494/web/.htpasswd
+AuthGroupFile /dev/null
+AuthName "enter password"
+AuthType Basic
+require valid-user
+
 RewriteEngine On
 
 # www あり → www なし にリダイレクト
@@ -11,3 +17,26 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 # --- 現在のホスト名が yyk178494.cocotte.jp の場合のみ処理 ---
 RewriteCond %{HTTP_HOST} ^yyk178494\.cocotte\.jp$ [NC]
 RewriteRule ^(.*)$ https://yataka-bussan.jp/$1 [R=301,L]
+
+# --- キャッシュ制御---
+<IfModule mod_headers.c>
+    Header set Cache-Control "no-cache, no-store, must-revalidate"
+    Header set Pragma "no-cache"
+    Header set Expires 0
+</IfModule>
+
+# BEGIN WordPress
+# "BEGIN WordPress" から "END WordPress" までのディレクティブ (行) は
+# 動的に生成され、WordPress フィルターによってのみ修正が可能です。
+# これらのマーカー間にあるディレクティブへのいかなる変更も上書きされてしまいます。
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+RewriteBase /
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
+</IfModule>
+
+# END WordPress
