--- a/wordpress/.htaccess
+++ b/wordpress/.htaccess
@@ -5,20 +5,27 @@ AuthType Basic
 require valid-user
 
 RewriteEngine On
-
+# -----------------------------------------
 # www あり → www なし にリダイレクト
+# -----------------------------------------
 RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
 RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
 
-# --- HTTP → HTTPS へリダイレクト ---
+# -----------------------------------------
+# HTTP → HTTPS へリダイレクト
+# -----------------------------------------
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
-# --- 現在のホスト名が yyk178494.cocotte.jp の場合のみ処理 ---
+# -----------------------------------------
+# 現在のホスト名が yyk178494.cocotte.jp の場合のみ処理
+# -----------------------------------------
 RewriteCond %{HTTP_HOST} ^yyk178494\.cocotte\.jp$ [NC]
 RewriteRule ^(.*)$ https://yataka-bussan.jp/$1 [R=301,L]
 
-# --- キャッシュ制御---
+# -----------------------------------------
+# キャッシュ制御
+# -----------------------------------------
 <IfModule mod_headers.c>
     Header set Cache-Control "no-cache, no-store, must-revalidate"
     Header set Pragma "no-cache"
